--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="topics.html">Topics</a></li>
         <li><a href="notes.html">Notes</a></li>
         <li><a href="tutorials.html">Tutorials</a></li>
-        <li><a href="about.html">About US</a></li>
+        <li><a href="about.html">About Us</a></li>
       </ul>
     </nav>
   </header>
