--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
         <li><a href="topics.html">Topics</a></li>
         <li><a href="notes.html">Notes</a></li>
         <li><a href="tutorials.html">Tutorials</a></li>
-        <li><a href="about.html" style="text-decoration: underline;">About</a></li>
+        <li><a href="about.html" style="text-decoration: underline;">About Us</a></li>
       </ul>
     </nav>
   </header>
