--- a/notes.html
+++ b/notes.html
@@ -138,7 +138,8 @@
       <div class="note-card">
         <h3>🌐 Networking Basics</h3>
         <p>LANs, WANs, topology types, and more.</p>
-        <a href="types-of-networks_2.pdf" download class="btn-download">Download</a>
+        <a href="https://drive.google.com/uc?export=download&id=1mhxTZ1R67RPby9Ms8kj2waAsLePt7a6D
+" download class="btn-download">Download</a>
       </div>
 
       <div class="note-card">
