--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>💡 ICT Topics</h2>
       <p>Browse core ICT lessons and concepts simplified for students.</p>
     </div>
-    <div class="card">
+    <div class="about">
       <h2>📚 Download Notes</h2>
       <p>Access free downloadable notes, guides, and past papers.</p>
     </div>
