--- a/notes.html
+++ b/notes.html
@@ -132,7 +132,8 @@
       <div class="note-card">
         <h3>📖 Introduction to ICT</h3>
         <p>Basic concepts and history of ICT.</p>
-        <a href="LEVEL_1_ICT_complete_NOTES.pdf" download class="btn-download">Download</a>
+        <a href="https://drive.google.com/uc?export=download&id=1oae-ti2VKD7aCU7pDgyoPx_gGECzDJgF
+" download class="btn-download">Download</a>
       </div>
 
       <div class="note-card">
@@ -145,25 +146,29 @@
       <div class="note-card">
         <h3>💻 Web Development</h3>
         <p>HTML, CSS, and JavaScript fundamentals.</p>
-        <a href="html-and-css-for-beginners_compress.pdf" download class="btn-download">Download</a>
+        <a href="https://drive.google.com/uc?export=download&id=1q-F-ZhHDd6nN0-A09j0PYuaYWO1lcE1V
+" download class="btn-download">Download</a>
       </div>
 
       <div class="note-card">
         <h3>🧠 Computer Hardware</h3>
         <p>Learn about processors, memory, and input/output devices.</p>
-        <a href="INTRODUCTION_TO_COMPUTER_HARDWARE.pdf" download class="btn-download">Download</a>
+        <a href="https://drive.google.com/uc?export=download&id=1hD2D7AY2rr7qIs-JImgW5IhyyUSiE8Fa
+" download class="btn-download">Download</a>
       </div>
 
       <div class="note-card">
         <h3>🖥️ Programming Concepts</h3>
         <p>Introduction to Python and programming logic.</p>
-        <a href="Programming in Python 💡.pdf" download class="btn-download">Download</a>
+        <a href="https://drive.google.com/uc?export=download&id=1n64JQ6NEoDorWhSgF8nu1RNkfc8lxvDb
+" download class="btn-download">Download</a>
       </div>
 
       <div class="note-card">
         <h3>🔐 Cybersecurity Basics</h3>
         <p>Threats, attacks, and basic protection methods.</p>
-        <a href="Introduction-cyber-security.pdf" download class="btn-download">Download</a>
+        <a href="https://drive.google.com/uc?export=download&id=1PrE6yVsvmwVcx1KUah1fq5BaDofe8hfY
+" download class="btn-download">Download</a>
       </div>
 
       <div class="note-card">
