--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <body>
+
+  <!-- Mobile Navigation -->
+  <header>
+    <div class="navbar">
+      <div class="logo">SmartICTZone</div>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+      <nav id="mobileMenu" class="hidden">
+        <a href="#home">Home</a>
+        <a href="#">Topics</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Your other content below -->
+
 
   <!-- Header -->
   <header>
