--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
   <footer>
     <p>&copy; 2025 SmartICTZone | Built by Lorgodan Makhaula</p>
   </footer>
+  <script>
+  function toggleMenu() {
+    document.getElementById("navLinks").classList.toggle("show");
+  }
+</script>
+
 
 </body>
 </html>
