--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- Header -->
   <header>
     <div class="logo">SmartICTZone</div>
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+  <ul class="nav-links" id="navLinks">
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -59,5 +61,11 @@
   <footer>
     <p>&copy; 2025 SmartICTZone | Built by Lorgodan Makhaula</p>
   </footer>
+  <script>
+  function toggleMenu() {
+    document.getElementById("navLinks").classList.toggle("show");
+  }
+</script>
+
 </body>
 </html>
