--- a/notes.html
+++ b/notes.html
@@ -196,7 +196,7 @@
       <div class="note-card">
         <h3>🌐 Networking Basics</h3>
         <p>LANs, WANs, topology types, and more.</p>
-        <a href="https://drive.google.com/uc?export=download&id=1mhxTZ1R67RPby9Ms8kj2waAsLePt7a6D
+        <a href="https://www.dropbox.com/scl/fi/d4ogniptl3n3yisrw886m/types-of-networks_2.pdf?rlkey=76h0ckqil82gwatcrqpk7ubp6&raw=1
 " download class="btn-download">Download</a>
       </div>
 
