--- a/notes.html
+++ b/notes.html
@@ -189,7 +189,7 @@
       <div class="note-card">
         <h3>📖 Introduction to ICT</h3>
         <p>Basic concepts and history of ICT.</p>
-        <a href="https://drive.google.com/uc?export=download&id=1oae-ti2VKD7aCU7pDgyoPx_gGECzDJgF
+        <a href="<a href="https://www.dropbox.com/scl/fi/8vrfo63dj68v4yaurhoux/LEVEL_1_ICT_complete_NOTES.pdf?rlkey=zdvkvo0pa645bce9pqsvwtqgw&raw=1
 " download class="btn-download">Download</a>
       </div>
 
