--- a/notes.html
+++ b/notes.html
@@ -210,7 +210,7 @@
       <div class="note-card">
         <h3>🧠 Computer Hardware</h3>
         <p>Learn about processors, memory, and input/output devices.</p>
-        <a href="https://drive.google.com/uc?export=download&id=1hD2D7AY2rr7qIs-JImgW5IhyyUSiE8Fa
+        <a href="https://www.dropbox.com/scl/fi/d5hy83emynslyr42j9pgi/INTRODUCTION_TO_COMPUTER_HARDWARE.pdf?rlkey=pvh3llb02pm0os2ir493ybk7a&st=x8gi5nor&dl=1
 " download class="btn-download">Download</a>
       </div>
 
